--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vue/composition-api": "^1.0.0-beta.11",
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "portal-vue": "^2.1.7",
     "register-service-worker": "^1.7.1",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/node": "^14.10.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
