--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "test:unit:watch": "vue-cli-service test:unit --watch",
+    "test:unit:watch": "vue-cli-service test:unit --watch --no-cache",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
